trunk/Source/include/OpenGL1x.hpp


extern PACKAGE bool GL_NV_blend_square;

extern PACKAGE bool GL_NV_conditional_render;

extern PACKAGE bool GL_NV_copy_image;

extern PACKAGE bool GL_NV_depth_buffer_float;

extern PACKAGE bool GL_NV_fence;

extern PACKAGE bool GL_NV_float_buffer;

extern PACKAGE bool GL_NV_fog_distance;

extern PACKAGE bool GL_NV_geometry_program4;

extern PACKAGE bool GL_NV_light_max_exponent;

extern PACKAGE bool GL_NV_multisample_filter_hint;

extern PACKAGE bool GL_NV_occlusion_query;

extern PACKAGE bool GL_NV_point_sprite;

extern PACKAGE bool GL_NV_primitive_restart;

extern PACKAGE bool GL_NV_register_combiners;

extern PACKAGE bool GL_NV_shader_buffer_load;

extern PACKAGE bool GL_NV_texgen_reflection;

extern PACKAGE bool GL_NV_texture_compression_vtc;

extern PACKAGE bool GL_NV_texture_env_combine4;

extern PACKAGE bool GL_NV_texture_rectangle;

extern PACKAGE bool GL_NV_texture_shader;

extern PACKAGE bool GL_NV_texture_shader2;

extern PACKAGE bool GL_NV_texture_shader3;

extern PACKAGE bool GL_NV_transform_feedback;

extern PACKAGE bool GL_NV_vertex_array_range;

extern PACKAGE bool GL_NV_vertex_array_range2;

extern PACKAGE bool GL_NV_vertex_buffer_unified_memory;

extern PACKAGE bool GL_NV_vertex_program;

extern PACKAGE bool GL_SGI_color_matrix;

extern PACKAGE bool GL_SGIS_generate_mipmap;

extern PACKAGE bool GL_SGIS_multisample;

extern PACKAGE bool GL_SGIS_texture_border_clamp;

extern PACKAGE bool GL_SGIS_texture_color_mask;

extern PACKAGE bool GL_SGIS_texture_edge_clamp;

extern PACKAGE bool GL_SGIS_texture_lod;

extern PACKAGE bool GL_SGIX_depth_texture;

extern PACKAGE bool GL_SGIX_shadow;

extern PACKAGE bool GL_SGIX_shadow_ambient;

extern PACKAGE bool GL_AMD_vertex_shader_tessellator;

extern PACKAGE bool GL_WIN_swap_hint;

extern PACKAGE bool WGL_ARB_buffer_region;

extern PACKAGE bool WGL_ARB_create_context;

extern PACKAGE bool WGL_ARB_create_context_profile;

extern PACKAGE bool WGL_ARB_extensions_string;

extern PACKAGE bool WGL_ARB_framebuffer_sRGB;

extern PACKAGE bool WGL_ARB_make_current_read;

extern PACKAGE bool WGL_ARB_multisample;

extern PACKAGE bool WGL_ARB_pbuffer;

extern PACKAGE bool WGL_ARB_pixel_format;

extern PACKAGE bool WGL_ARB_pixel_format_float;

extern PACKAGE bool WGL_ARB_render_texture;

extern PACKAGE bool WGL_ATI_pixel_format_float;

extern PACKAGE bool WGL_EXT_framebuffer_sRGB;

extern PACKAGE bool WGL_EXT_pixel_format_packed_float;

extern PACKAGE bool WGL_EXT_swap_control;

extern PACKAGE bool WGL_NV_gpu_affinity;

extern PACKAGE bool GLX_VERSION_1_1;

extern PACKAGE bool GLX_VERSION_1_2;

extern PACKAGE bool GLX_VERSION_1_3;

extern PACKAGE bool GLX_VERSION_1_4;

extern PACKAGE bool GLX_ARB_create_context;

extern PACKAGE bool GLX_ARB_create_context_profile;

extern PACKAGE bool GLX_ARB_framebuffer_sRGB;

extern PACKAGE bool GLX_ARB_multisample;

extern PACKAGE bool GLX_EXT_framebuffer_sRGB;

extern PACKAGE bool GLX_EXT_fbconfig_packed_float;

extern PACKAGE bool GLX_SGIS_multisample;

extern PACKAGE bool GLX_EXT_visual_info;

extern PACKAGE bool GLX_SGI_swap_control;

extern PACKAGE bool GLX_SGI_video_sync;

extern PACKAGE bool GLX_SGI_make_current_read;

extern PACKAGE bool GLX_SGIX_video_source;

extern PACKAGE bool GLX_EXT_visual_rating;

extern PACKAGE bool GLX_EXT_import_context;

extern PACKAGE bool GLX_SGIX_fbconfig;

extern PACKAGE bool GLX_SGIX_pbuffer;

extern PACKAGE bool GLX_SGI_cushion;

extern PACKAGE bool GLX_SGIX_video_resize;

extern PACKAGE bool GLX_SGIX_dmbuffer;

extern PACKAGE bool GLX_SGIX_swap_group;

extern PACKAGE bool GLX_SGIX_swap_barrier;

extern PACKAGE bool GLX_SGIS_blended_overlay;

extern PACKAGE bool GLX_SGIS_shared_multisample;

extern PACKAGE bool GLX_SUN_get_transparent_index;

extern PACKAGE bool GLX_3DFX_multisample;

extern PACKAGE bool GLX_MESA_copy_sub_buffer;

extern PACKAGE bool GLX_MESA_pixmap_colormap;

extern PACKAGE bool GLX_MESA_release_buffers;

extern PACKAGE bool GLX_MESA_set_3dfx_mode;

extern PACKAGE bool GLX_SGIX_visual_select_group;

extern PACKAGE bool GLX_SGIX_hyperpipe;

extern PACKAGE bool GL_GREMEDY_frame_terminator;

extern PACKAGE bool GL_GREMEDY_string_marker;

extern PACKAGE bool GLU_EXT_object_space_tess;

extern PACKAGE bool GLU_EXT_nurbs_tessellator;

extern PACKAGE bool GLU_EXT_Texture;

extern "C" void __stdcall glBindTexture(unsigned target, unsigned texture);

extern "C" void __stdcall glBlendFunc(unsigned sfactor, unsigned dfactor);

extern "C" void __stdcall glClear(unsigned mask);

extern "C" void __stdcall glClearColor(float red, float green, float blue, float alpha);

extern "C" void __stdcall glClearDepth(double depth);

extern "C" void __stdcall glClearStencil(int s);

extern "C" void __stdcall glColorMask(System::ByteBool red, System::ByteBool green, System::ByteBool blue, System::ByteBool alpha);

extern "C" void __stdcall glCopyTexImage1D(unsigned target, int level, unsigned internalFormat, int x, int y, int width, int border);

extern "C" void __stdcall glCopyTexImage2D(unsigned target, int level, unsigned internalFormat, int x, int y, int width, int height, int border);

extern "C" void __stdcall glCopyTexSubImage1D(unsigned target, int level, int xoffset, int x, int y, int width);

extern "C" void __stdcall glCopyTexSubImage2D(unsigned target, int level, int xoffset, int yoffset, int x, int y, int width, int height);

extern "C" void __stdcall glCullFace(unsigned mode);

extern "C" void __stdcall glDeleteTextures(int n, Opengltokens::PGLuint textures);

extern "C" void __stdcall glDepthFunc(unsigned func);

extern "C" void __stdcall glDepthMask(System::ByteBool flag);

extern "C" void __stdcall glDepthRange(double zNear, double zFar);

extern "C" void __stdcall glDisable(unsigned cap);

extern "C" void __stdcall glDrawArrays(unsigned mode, int first, int count);

extern "C" void __stdcall glDrawBuffer(unsigned mode);

extern "C" void __stdcall glDrawElements(unsigned mode, int count, unsigned atype, void * indices);

extern "C" void __stdcall glEnable(unsigned cap);

extern "C" void __stdcall glFinish(void);

extern "C" void __stdcall glFlush(void);

extern "C" void __stdcall glFrontFace(unsigned mode);

extern "C" void __stdcall glGenTextures(int n, Opengltokens::PGLuint textures);

extern "C" void __stdcall glGetBooleanv(unsigned pname, Opengltokens::PGLboolean params);

extern "C" void __stdcall glGetDoublev(unsigned pname, System::PDouble params);

extern "C" unsigned __stdcall glGetError(void);

extern "C" void __stdcall glGetFloatv(unsigned pname, System::PSingle params);

extern "C" void __stdcall glGetIntegerv(unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glGetPointerv(unsigned pname, void *params);

extern "C" char * __stdcall glGetString(unsigned name);

extern "C" void __stdcall glGetTexImage(unsigned target, int level, unsigned format, unsigned atype, void * pixels);

extern "C" void __stdcall glGetTexLevelParameterfv(unsigned target, int level, unsigned pname, System::PSingle params);

extern "C" void __stdcall glGetTexLevelParameteriv(unsigned target, int level, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glGetTexParameterfv(unsigned target, unsigned pname, System::PSingle params);

extern "C" void __stdcall glGetTexParameteriv(unsigned target, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glHint(unsigned target, unsigned mode);

extern "C" System::ByteBool __stdcall glIsEnabled(unsigned cap);

extern "C" System::ByteBool __stdcall glIsTexture(unsigned texture);

extern "C" void __stdcall glLineWidth(float width);

extern "C" void __stdcall glLogicOp(unsigned opcode);

extern "C" void __stdcall glPixelStoref(unsigned pname, float param);

extern "C" void __stdcall glPixelStorei(unsigned pname, int param);

extern "C" void __stdcall glPointSize(float size);

extern "C" void __stdcall glPolygonMode(unsigned face, unsigned mode);

extern "C" void __stdcall glPolygonOffset(float factor, float units);

extern "C" void __stdcall glReadBuffer(unsigned mode);

extern "C" void __stdcall glReadPixels(int x, int y, int width, int height, unsigned format, unsigned atype, void * pixels);

extern "C" void __stdcall glScissor(int x, int y, int width, int height);

extern "C" void __stdcall glStencilFunc(unsigned func, int ref, unsigned mask);

extern "C" void __stdcall glStencilMask(unsigned mask);

extern "C" void __stdcall glStencilOp(unsigned fail, unsigned zfail, unsigned zpass);